--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,9 +1,10 @@
 Changes for Perl Application Development and Refactoring Environment
 
 v0.26 2009.0X.XX
+
     The output window now understands the color and font-face
         related ANSI control sequences (SMUELLER)
-    The long-awaited MainWindow.pm -> Main.pm rename (ADAMK)
+    The long-awaited MainWindow.pm -> Main.pm (ADAMK)
     Added styles for text/x-patch, text/x-makefile, text/x-yaml,
         text/css, text/plain(apache conf) file types (KEEDI)
     Now style config file supports foreground, background, bold,
